--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -49,18 +49,21 @@
 				</div>
             </div>
             <div class="col">
+				{% set a = ad.author  %}
                 <div class="row mb-3 align-items-center">
-                    <div class="col-4">
-                        <img src="http://placehold.it/64x64/" alt="Avatar de Joseph">
+                    <div class="col-3">
+						<a href="{{path("user_show", {'slug': a.slug})}}">
+                        	<img src="{{a.picture}}" class="avatar avatar-medium" alt="Avatar de {{a.fullName}}">
+						</a>
                     </div>
                     <div class="col">
-                        <h3>Joseph Dupond</h3>
-                        <span class="badge badge-primary">3 annonces</span>
+						<a href="{{path("user_show", {'slug': a.slug})}}">
+                        	<h3>{{a.fullName}}</h3>
+						</a>
+                        <span class="badge badge-primary">{{a.ads | length}} annonces</span>
                     </div> 
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos fugiat possimus consequatur debitis dolor provident itaque fuga quasi tenetur.</p>
-                <p>Fuga iure quia ipsam atque, accusantium aliquid sequi expedita odit animi? Voluptate, placeat ab unde vitae libero at rerum obcaecati?</p>
-                <p>Quae odio, officiis dolorum soluta fugit ullam nemo aut, magnam, neque aperiam ratione eaque deserunt quas possimus nesciunt sint accusamus?</p>
+                {{a.description | raw}}
             </div>
         </div>
     </div>
