Mise en place administration

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,13 @@ div.ad-title
     background-position: center center;
 }
 
+div.ad-title .btn
+{
+    margin-top: 2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
 div.ad-title h1, div.ad-title p
 {
     color: white;
@@ -41,7 +48,28 @@ div.carousel-caption
     max-height: 24px;
 }
 
+.avatar-micro
+{
+    max-width: 24px;
+    max-height: 24px;
+}
+
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover
 {
     color: firebrick !important;
+}
+
+span.rating i
+{
+    color: goldenrod;
+}
+
+.alert a
+{
+    text-decoration: none;
+}
+
+.alert .btn 
+{
+    color:white;
 }
