--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -16,7 +16,7 @@
 			</p>
 		</div>
 
-		<h2 class="h1 mt-3 mb-4">Nos appartements stars</h2>
+		<h2 class="h1 my-5">Nos appartements stars</h2>
 
 		<div class="row mt-5">
 			<div class="col-md-4">
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 
-		<h2>Nos propriétaires stars</h2>
+		<h2 class="my-5">Nos propriétaires stars</h2>
 
 		<div class="row">
 			<div class="col">
